--- a/src/components/navigation/navbar.module.css
+++ b/src/components/navigation/navbar.module.css
@@ -1,5 +1,22 @@
 .container{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    padding-left: 10px;
+    gap: 5px;
     width: 250px;
-    background-color: red;
+    background-color: #0B2D91;
     height: 100vh;
 }
+
+  /*Navigation*/
+  a{
+    text-decoration: none;
+    color: rgb(186, 186, 186);
+  }
+
+  a.active {/*Test for showing active link*/
+    color: white;
+    font-weight: 700;
+  }
+  
