--- a/src/components/setup/setup.module.css
+++ b/src/components/setup/setup.module.css
@@ -79,3 +79,21 @@ input {
 .input-select-wrapper:has(input:focus, select:focus) {
 	border: 1px solid blue;
 }
+
+.modal {
+	position: absolute;
+	width: 400px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 10px;
+	background-color: white;
+}
+.modal-backdrop {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgba(127, 27, 27, 0.5);
+}
