--- a/src/components/navigation/navbar.module.css
+++ b/src/components/navigation/navbar.module.css
@@ -1,22 +1,22 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    padding-left: 10px;
-    gap: 5px;
-    width: 250px;
-    background-color: #0B2D91;
-    height: 100vh;
+.container {
+	display: flex;
+	flex-direction: column;
+	font-size: 1.5rem;
+	padding-left: 10px;
+	gap: 5px;
+	width: 250px;
+	background-color: #0b2d91;
+	min-height: 100vh;
 }
 
-  /*Navigation*/
-  a{
-    text-decoration: none;
-    color: rgb(186, 186, 186);
-  }
+/*Navigation*/
+a {
+	text-decoration: none;
+	color: rgb(186, 186, 186);
+}
 
-  a.active {/*Test for showing active link*/
-    color: white;
-    font-weight: 700;
-  }
-  
+a.active {
+	/*Test for showing active link*/
+	color: white;
+	font-weight: 700;
+}
