--- a/src/components/setup/setup.module.css
+++ b/src/components/setup/setup.module.css
@@ -13,9 +13,10 @@
 .input-container {
 	display: flex;
 	flex-direction: column;
+	gap: 5px;
 }
 input {
-	height: 30px;
+	padding: 5px;
 	border-radius: 3px;
 	border: 1px solid rgb(208, 208, 208);
 }
@@ -101,17 +102,9 @@ input {
 .category-wrapper {
 	display: flex;
 	flex-direction: column;
+
 	padding: 20px;
 	gap: 10px;
-
-	button {
-		width: 30px;
-		height: 30px;
-		align-self: center;
-		border: 1px solid gainsboro;
-		background-color: transparent;
-		border-radius: 50%;
-	}
 }
 
 .category-button {
@@ -121,4 +114,32 @@ input {
 	background-color: transparent;
 	border: 1px solid rgb(94, 141, 250);
 	border-radius: 10px;
+}
+
+.textinput-wrapper {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 10px;
+	justify-content: space-between;
+}
+
+.delete-button {
+	padding: 5px;
+	border: 1px solid rgb(255, 98, 98);
+	background-color: transparent;
+	color: white;
+	border-radius: 5px;
+}
+.add-button {
+	padding: 5px;
+	border: 1px solid rgb(94, 141, 250);
+	height: 30px;
+	align-self: center;
+
+	background-color: transparent;
+	border-radius: 5px;
+}
+img {
+	cursor: pointer;
 }
