--- a/src/components/navigation/navbar.module.css
+++ b/src/components/navigation/navbar.module.css
@@ -1,12 +1,19 @@
-.container {
+.navigation {
 	display: flex;
 	flex-direction: column;
-	font-size: 1.5rem;
+
 	padding-left: 10px;
+	padding-top: 10px;
 	gap: 5px;
-	width: 250px;
+	min-width: 250px;
+	max-width: 250px;
 	background-color: #0b2d91;
 	min-height: 100vh;
+}
+.logo {
+	padding-top: 10px;
+	width: 80%;
+	margin-bottom: 20px;
 }
 
 /*Navigation*/
@@ -15,8 +22,22 @@ a {
 	color: rgb(186, 186, 186);
 }
 
-a.active {
-	/*Test for showing active link*/
+h2 {
+	font-size: 1.5rem;
+}
+.nav-item-active {
 	color: white;
 	font-weight: 700;
+}
+
+.nav-item-wrapper {
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+	align-items: center;
+
+	img {
+		height: 25px;
+		width: 25px;
+	}
 }
