--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,11 +1,20 @@
 .container {
 	display: grid;
 	grid-template-rows: auto;
-
+	gap: 20px;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	width: 100%;
+	background-color: grey;
 }
 
-.barChart {
+.bar-chart {
 	background-color: red;
+}
+
+.donut-chart {
+	min-height: 400px;
+	max-height: 400px;
+}
+.chart-wrapper {
+	border-radius: 10px;
 }
