--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,20 +1,24 @@
 .container {
 	display: grid;
 	grid-template-rows: auto;
-	gap: 20px;
+	gap: 40px;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	width: 100%;
-	background-color: grey;
+	background-color: rgb(255, 255, 255);
+	padding: 20px;
 }
 
-.bar-chart {
-	background-color: red;
-}
-
-.donut-chart {
+.chart-container {
 	min-height: 400px;
-	max-height: 400px;
+	background-color: white;
+	padding: 20px;
+	box-shadow: 0 0 4px rgb(219, 219, 219);
+	border-radius: 10px;
+	&:hover {
+		box-shadow: 0 0 6px rgb(185, 185, 185);
+	}
 }
+
 .chart-wrapper {
 	border-radius: 10px;
 }
