--- a/src/components/navigation/navbar.module.css
+++ b/src/components/navigation/navbar.module.css
@@ -7,7 +7,7 @@
 	gap: 5px;
 	min-width: 250px;
 	max-width: 250px;
-	background-color: #0b2d91;
+	background-color: #03045e;
 	min-height: 100vh;
 }
 .logo {
