--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: Lato, Avenir, Helvetica, Arial, sans-serif;
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
