Add animations to SummarySnippet

--- a/src/components/setup/setup.module.css
+++ b/src/components/setup/setup.module.css
@@ -27,7 +27,7 @@ input {
 	justify-content: center;
 	align-items: center;
 	height: 50px;
-	border: 1px solid rgb(197, 194, 194);
+	border: 1px solid #8797af;
 	border-radius: 100px;
 	width: fit-content;
 	margin: 0 auto 0 auto;
